// Vitest Snapshot v1

exports[`test radio group layout direction 1`] = `
"<div class=\\"var-radio-group__wrap\\">
  <div class=\\"var-radio-group var-radio-group--vertical\\">
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio group validation 1`] = `
"<div class=\\"var-radio-group__wrap\\">
  <div class=\\"var-radio-group var-radio-group--horizontal\\">
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked var-radio--error\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text var-radio--error\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--checked var-radio--error\\"><i class=\\"var-icon var-icon--set var-icon-radio-marked var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text var-radio--error\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__message\\">必须选第一个</div>
      <div class=\\"var-form-details__length\\"></div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test radio group validation 2`] = `
"<div class=\\"var-radio-group__wrap\\">
  <div class=\\"var-radio-group var-radio-group--horizontal\\">
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--checked\\"><i class=\\"var-icon var-icon--set var-icon-radio-marked var-radio__icon var-radio--with-animation\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio validation 1`] = `
"<div class=\\"var-radio__wrap\\">
  <div class=\\"var-radio\\">
    <div class=\\"var-radio__action var-radio--unchecked var-radio--error\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
    <div class=\\"var-radio__text var-radio--error\\"></div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__message\\">您必须勾选</div>
      <div class=\\"var-form-details__length\\"></div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test radio validation 2`] = `
"<div class=\\"var-radio__wrap\\">
  <div class=\\"var-radio\\">
    <div class=\\"var-radio__action var-radio--checked\\"><i class=\\"var-icon var-icon--set var-icon-radio-marked var-radio__icon var-radio--with-animation\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
    <div class=\\"var-radio__text\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;
